--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" />
   <link rel="stylesheet prefetch" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" />
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./public/style.css" />
 </head>
 
 <body>
