change to linktext

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <hr />
     <div class="links">
       <a target="_blank" href="https://github.com/ojself">Projects</a>
-      <a target="_blank" href="http://www.flesjoe.com/chessathor">CHESSATHOR</a>
+      <a target="_blank" href="http://www.flesjoe.com/chessathor">PLAY!</a>
       <a target="_blank" href="mailto:tormod.flesjo@gmail.com">Contact</a>
     </div>
     <div class="icons-social">
