--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
   <!-- todo, make links mobile friendly  -->
 
   <link rel="icon" type="image/png" href="./public/favicon.ico" sizes="16x16" />
-
   <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" />
   <link rel="stylesheet prefetch" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" />
-
   <link rel="stylesheet" href="./public/style.css" />
 </head>
 
@@ -34,7 +32,7 @@
     <hr />
     <div class="links">
       <a target="_blank" href="https://github.com/ojself">Projects</a>
-      <a target="_blank" href="http://www.flesjoe.com/chessathor">PLAY!</a>
+      <a class="chessathor" target="_blank" href="http://chessathor2.flesjoe.com/">Chessathor!</a>
       <a target="_blank" href="mailto:tormod.flesjo@gmail.com">Contact</a>
     </div>
     <div class="icons-social">
