--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <hr />
     <div class="links">
       <a target="_blank" href="https://github.com/ojself">Projects</a>
-      <a class="chessathor" target="_blank" href="http://chessathor2.flesjoe.com/">Chessathor!</a>
+      <!-- <a class="chessathor" target="_blank" href="http://chessathor2.flesjoe.com/">Chessathor!</a> -->
+      <a class="chessathor" target="_blank" href="https://chw4k.herokuapp.com/">CyberhackerWarfare4K!</a>
       <a target="_blank" href="mailto:tormod.flesjo@gmail.com">Contact</a>
     </div>
     <div class="icons-social">
